# agent-sources

./: README.md
projeto-agentsville-trip-planner-a-multi/: README.md  SUBMISSION_NOTES.md  project_starter.ipynb  projeto-agentsville-trip-pla.textClipping  pyproject.toml  requirements.txt
projeto-agentsville-trip-planner-a-multi/agentsville_trip_planner/: __init__.py  agents.py  cli.py  data.py  models.py  orchestrator.py  renderer.py
projeto-agentsville-trip-planner-a-multi/examples/: demo.py
projeto-agentsville-trip-planner-a-multi/tests/: test_trip_planner.py
projeto-ai-powered-agentic-workflow-for-project-management/: Product-Spec-Email-Router.txt  README.md  action_planning_agent.py  agentic_workflow.py  augmented_prompt_agent.py  direct_prompt_agent.py  evaluation_agent.py  knowledge_augmented_prompt_agent.py  pyproject.toml  rag_knowledge_prompt_agent.py  reflection.md  routing_agent.py
projeto-ai-powered-agentic-workflow-for-project-management/agentic_pm/: __init__.py  agents.py  cli.py  models.py  orchestrator.py  renderer.py
projeto-ai-powered-agentic-workflow-for-project-management/examples/: sample_project.json
projeto-ai-powered-agentic-workflow-for-project-management/test_outputs/: agent_tests_output.txt  agentic_workflow_output.txt
projeto-ai-powered-agentic-workflow-for-project-management/test_scripts/: test_action_planning_agent.py  test_augmented_prompt_agent.py  test_direct_prompt_agent.py  (+4 more)
projeto-paper-company-sales-team/: README.md  beavers_choice.db  project_starter.py  pyproject.toml  reflection_report.md  requirements.txt
(+14 files in other folders)
